correction in integration and  functional tests

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon server.js",
-    "test": "jest",
+    "test": "jest --testMatch '**/tests/**/*.unit.test.js'",
     "test:integration": "jest --config jest.integration.config.js",
     "test:functional": "jest --config jest.functional.config.js"
   },
