--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -42,4 +42,6 @@ jobs:
         run: npm ci
 
       - name: Run Unit Tests
+        env:
+          MONGODB_URI_TEST: ${{ secrets.MONGODB_URI_TEST }}
         run: npm test
