--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,54 +8,54 @@ on:
 #    branches: [ main ]
 
 jobs:
-  lint:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v5
+  # lint:
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - name: Checkout code
+  #       uses: actions/checkout@v5
 
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: 20
-          cache: 'npm'
+  #     - name: Setup Node.js
+  #       uses: actions/setup-node@v4
+  #       with:
+  #         node-version: 20
+  #         cache: 'npm'
 
-      - name: Install dependencies
-        run: npm ci
+  #     - name: Install dependencies
+  #       run: npm ci
 
-      - name: Run Linter
-        run: npm run lint
+  #     - name: Run Linter
+  #       run: npm run lint
 
-  test:
-    runs-on: ubuntu-latest
-    needs: lint
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v5
-        with:
-          fetch-depth: 0  
+   test:
+     runs-on: ubuntu-latest
+  #   needs: lint
+     steps:
+  #     - name: Checkout code
+  #       uses: actions/checkout@v5
+  #       with:
+  #         fetch-depth: 0  
         
 
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: 20
-          cache: 'npm'
+  #     - name: Setup Node.js
+  #       uses: actions/setup-node@v4
+  #       with:
+  #         node-version: 20
+  #         cache: 'npm'
 
-      - name: Install dependencies
-        run: npm ci
+  #     - name: Install dependencies
+  #       run: npm ci
 
-      - name: Run Unit Tests
-        env:
-          MONGODB_URI_TEST: ${{ secrets.MONGODB_URI_TEST }}
-        run: |
-          npm test
-          npm run test:integration
-          npm run test:functional
+      # - name: Run Unit Tests
+      #   env:
+      #     MONGODB_URI_TEST: ${{ secrets.MONGODB_URI_TEST }}
+      #   run: |
+      #     npm test
+      #     npm run test:integration
+      #     npm run test:functional
       
       - name: SonarCloud Scan
         uses: SonarSource/sonarqube-scan-action@v5.3.0
         env:
-          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN_BACKEND }}
 
 
