--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,10 +26,10 @@ jobs:
   #     - name: Run Linter
   #       run: npm run lint
 
-   test:
-     runs-on: ubuntu-latest
+  # test:
+  #  runs-on: ubuntu-latest
   #   needs: lint
-     steps:
+  #   steps:
   #     - name: Checkout code
   #       uses: actions/checkout@v5
   #       with:
@@ -53,14 +53,22 @@ jobs:
       #     npm run test:integration
       #     npm run test:functional
       
-      - name: SonarCloud Scan
-        uses: SonarSource/sonarqube-scan-action@v5.3.0
-        env:
-          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN_BACKEND }}
-          GITHUB_TOKEN: ${{ secrets.GIT_TOKEN }}
-        with:
-          args: >
-            -Dsonar.organization=wahib-git
-            -Dsonar.projectKey=Support-Ticket-Management-System
+    sonarcloud:
+      runs-on: ubuntu-latest  
+      steps:  
+        - name: Checkout code
+          uses: actions/checkout@v5
+          with:
+            fetch-depth: 0  
+
+        - name: SonarCloud Scan
+          uses: SonarSource/sonarqube-scan-action@v5.3.0
+          env:
+            SONAR_TOKEN: ${{ secrets.SONAR_TOKEN_BACKEND }}
+            GITHUB_TOKEN: ${{ secrets.GIT_TOKEN }}
+          with:
+            args: >
+              -Dsonar.organization=wahib-git
+              -Dsonar.projectKey=Support-Ticket-Management-System
 
 
