--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -81,23 +81,29 @@ jobs:
   #       env:
   #         GITHUB_TOKEN: ${{ secrets.GIT_TOKEN }}
 
-  TrivyScan:
-    name: Trivy
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v5
-        with:
-          fetch-depth: 0
-      - name: Run Trivy vulnerability scanner in repo mode
-        uses: aquasecurity/trivy-action@0.32.0
-        with:
-          scan-type: 'fs'
-          # ignore-unfixed: true
-          # format: 'sarif'
-          # output: 'trivy-results.sarif'
-          severity: 'CRITICAL,HIGH'
+  # TrivyScan:
+  #   name: Trivy
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - uses: actions/checkout@v5
+  #       with:
+  #         fetch-depth: 0
+  #     - name: Run Trivy vulnerability scanner in repo mode
+  #       uses: aquasecurity/trivy-action@0.32.0
+  #       with:
+  #         scan-type: 'fs'
+  #         severity: 'CRITICAL,HIGH'
 
-      # - name: Upload Trivy scan results to GitHub Security tab
-      #   uses: github/codeql-action/upload-sarif@v3
-      #   with:
-      #     sarif_file: 'trivy-results.sarif'
+    OWASPDependencyCheck:
+      name: OWASP Dependency Check
+      runs-on: ubuntu-latest
+      steps:
+        - uses: actions/checkout@v5
+          with:
+            fetch-depth: 0
+        - uses: dependency-check/Dependency-Check_Action@main
+          with:
+            project: "frontend-angular19"
+            path: "."
+            format: "HTML"
+            out: "reports"
