--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -98,9 +98,20 @@ jobs:
       name: OWASP Dependency Check
       runs-on: ubuntu-latest
       steps:
-        - uses: actions/checkout@v5
+        - name: Checkout code
+          uses: actions/checkout@v5
           with:
-            fetch-depth: 0
+            fetch-depth: 0 
+
+        - name: Setup Node.js
+          uses: actions/setup-node@v4
+          with:
+            node-version: 20
+            cache: 'npm'
+
+        - name: Install dependencies
+          run: npm ci
+          
         - uses: dependency-check/Dependency-Check_Action@main
           with:
             project: "frontend-angular19"
