--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -111,10 +111,10 @@ jobs:
 
         - name: Install dependencies
           run: npm ci
-          
+
         - uses: dependency-check/Dependency-Check_Action@main
           with:
-            project: "frontend-angular19"
+            project: "Support Ticket Management System"
             path: "."
             format: "HTML"
             out: "reports"
