--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -118,3 +118,8 @@ jobs:
             path: "."
             format: "HTML"
             out: "reports"
+        - name: Upload Dependency-Check report
+          uses: actions/upload-artifact@v4
+          with:
+            name: dependency-check-report
+            path: reports/dependency-check-report.html
