--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -94,32 +94,56 @@ jobs:
   #         scan-type: 'fs'
   #         severity: 'CRITICAL,HIGH'
 
-    OWASPDependencyCheck:
-      name: OWASP Dependency Check
+    # OWASPDependencyCheck:
+    #   name: OWASP Dependency Check
+    #   runs-on: ubuntu-latest
+    #   steps:
+    #     - name: Checkout code
+    #       uses: actions/checkout@v5
+    #       with:
+    #         fetch-depth: 0 
+
+    #     - name: Setup Node.js
+    #       uses: actions/setup-node@v4
+    #       with:
+    #         node-version: 20
+    #         cache: 'npm'
+
+    #     - name: Install dependencies
+    #       run: npm ci
+
+    #     - uses: dependency-check/Dependency-Check_Action@main
+    #       with:
+    #         project: "Support-Ticket-Management-System"
+    #         path: "."
+    #         format: "HTML"
+    #         out: "reports"
+    #     - name: Upload Dependency-Check report
+    #       uses: actions/upload-artifact@v4
+    #       with:
+    #         name: dependency-check-report
+    #         path: reports/dependency-check-report.html
+
+    docker-build-and-push:
+      name: Build and Push Docker Image
       runs-on: ubuntu-latest
+    #  needs: [test]
       steps:
         - name: Checkout code
           uses: actions/checkout@v5
           with:
-            fetch-depth: 0 
+            fetch-depth: 0  
 
-        - name: Setup Node.js
-          uses: actions/setup-node@v4
+        - name: Log in to Docker Hub
+          uses: docker/login-action@v3
           with:
-            node-version: 20
-            cache: 'npm'
+            username: ${{ secrets.DOCKER_HUB_USERNAME }}
+            password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
 
-        - name: Install dependencies
-          run: npm ci
-
-        - uses: dependency-check/Dependency-Check_Action@main
+        - name: Build and push Docker image
+          uses: docker/build-push-action@v6
           with:
-            project: "Support-Ticket-Management-System"
-            path: "."
-            format: "HTML"
-            out: "reports"
-        - name: Upload Dependency-Check report
-          uses: actions/upload-artifact@v4
-          with:
-            name: dependency-check-report
-            path: reports/dependency-check-report.html
+            context: .
+            push: true
+            tags: ${{ secrets.DOCKER_HUB_USERNAME }}/support-ticket-management-system-backend:latest
+            file: ./Dockerfile  
