--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon server.js",
-    "test": "jest --testMatch '**/tests/**/*.unit.test.js'",
+    "start": "node server.js",
+    "dev": "nodemon server.js",
+    "test": "jest --config jest.unit.config.js",
     "test:integration": "jest --config jest.integration.config.js",
     "test:functional": "jest --config jest.functional.config.js",
     "lint": "eslint .",
