--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js",
-    "test": "jest --config jest.unit.config.js",
-    "test:integration": "jest --config jest.integration.config.js",
-    "test:functional": "jest --config jest.functional.config.js",
+    "test": "jest --config jest.unit.config.js --coverage",
+    "test:integration": "jest --config jest.integration.config.js --coverage",
+    "test:functional": "jest --config jest.functional.config.js --coverage",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix"
   },
@@ -25,6 +25,7 @@
     "dotenv": "^16.4.7",
     "ejs": "^3.1.10",
     "express": "^4.21.2",
+    "express-validator": "^7.2.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.11.0",
     "multer": "^2.0.2",
@@ -39,5 +40,19 @@
     "globals": "^16.3.0",
     "jest": "^29.7.0",
     "supertest": "^7.1.4"
-  }
+  },
+  
+"jest": {
+  "collectCoverage": true,
+  "coverageReporters": ["lcov"],
+  "coverageDirectory": "coverage",
+  "collectCoverageFrom": [
+    "server.js",
+    "**/*.js",
+    "!**/node_modules/**",
+    "!**/test/**",
+    "!**/config/**",
+    "!**/coverage/**"
+  ]
+}
 }
