--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -65,10 +65,17 @@ jobs:
         env:
           MONGODB_URI_TEST: ${{ secrets.MONGODB_URI_TEST }}
         run: |
-          npm test
-          npm run test:integration
+          npm test 
+          npm run test:integration 
           npm run test:functional
-      
+
+      - name: Upload coverage report
+        uses: actions/upload-artifact@v4
+        with:
+          name: jest-coverage-report
+          path: coverage/
+          retention-days: 1      
+          
   sonarcloud-scan:
     name: SonarCloud Scan
     needs: tests
@@ -78,6 +85,11 @@ jobs:
         uses: actions/checkout@v5
         with:
           fetch-depth: 0  
+      - name: Download coverage report
+        uses: actions/download-artifact@v4
+        with:
+          name: jest-coverage-report
+          path: coverage/
 
       - name: SonarCloud Scan
         uses: SonarSource/sonarqube-scan-action@v5.3.0
@@ -88,56 +100,58 @@ jobs:
           args: 
             -Dsonar.organization=wahib-git
             -Dsonar.projectKey=Support-Ticket-Management-System
+            -Dsonar.javascript.lcov.reportPaths=coverage/lcov.info 
 
-  Trivy-Scan:
-    name: Trivy file system Scan
-    needs: sonarcloud-scan
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v5
-        with:
-          fetch-depth: 0
-      - name: Run Trivy vulnerability scanner in repo mode
-        uses: aquasecurity/trivy-action@0.32.0
-        with:
-          scan-type: 'fs'
-          severity: 'CRITICAL,HIGH'
+  # Trivy-Scan:
+  #   name: Trivy file system Scan
+  #   needs: sonarcloud-scan
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - uses: actions/checkout@v5
+  #       with:
+  #         fetch-depth: 0
+  #     - name: Run Trivy vulnerability scanner in repo mode
+  #       uses: aquasecurity/trivy-action@0.32.0
+  #       with:
+  #         scan-type: 'fs'
+  #         severity: 'CRITICAL,HIGH'
 
-  OWASP-Dependency-Check:
-    name: OWASP Dependency Check
-    needs: Trivy-Scan
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v5
-        with:
-          fetch-depth: 0 
+  # OWASP-Dependency-Check:
+  #   name: OWASP Dependency Check
+  #   needs: Trivy-Scan
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - name: Checkout code
+  #       uses: actions/checkout@v5
+  #       with:
+  #         fetch-depth: 0 
 
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: 22
-          cache: 'npm'
+  #     - name: Setup Node.js
+  #       uses: actions/setup-node@v4
+  #       with:
+  #         node-version: 22
+  #         cache: 'npm'
 
-      - name: Install dependencies
-        run: npm ci
+  #     - name: Install dependencies
+  #       run: npm ci
 
-      - uses: dependency-check/Dependency-Check_Action@1.1.0
-        with:
-          project: "Support-Ticket-Management-System"
-          path: "."
-          format: "HTML"
+  #     - uses: dependency-check/Dependency-Check_Action@1.1.0
+  #       with:
+  #         project: "Support-Ticket-Management-System"
+  #         path: "."
+  #         format: "HTML"
 
-      - name: Upload Dependency-Check report
-        uses: actions/upload-artifact@v4
-        with:
-          name: dependency-check-report
-          path: reports/dependency-check-report.html
+  #     - name: Upload Dependency-Check report
+  #       uses: actions/upload-artifact@v4
+  #       with:
+  #         name: dependency-check-report
+  #         path: reports/dependency-check-report.html
 
 
   docker-build-and-scan:
     name: Build, Scan(trivy) & Push Docker Image
-    needs: OWASP-Dependency-Check
+    needs: sonarcloud-scan
+ #  needs: OWASP-Dependency-Check
     runs-on: ubuntu-latest
 
     steps:
