--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,42 +9,42 @@ on:
 
 jobs:
 
-  Gitleaks-Scan:
-    name: Gitleaks scan
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v5
-        with:
-          fetch-depth: 0
-      - uses: gitleaks/gitleaks-action@v2
-        env:
-          GITHUB_TOKEN: ${{ secrets.GIT_TOKEN }}
+  # Gitleaks-Scan:
+  #   name: Gitleaks scan
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - uses: actions/checkout@v5
+  #       with:
+  #         fetch-depth: 0
+  #     - uses: gitleaks/gitleaks-action@v2
+  #       env:
+  #         GITHUB_TOKEN: ${{ secrets.GIT_TOKEN }}
 
 
-  lint:
-    name: Lint Code Base (ESLint)
-    runs-on: ubuntu-latest
-    needs: Gitleaks-Scan
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v5
+  # lint:
+  #   name: Lint Code Base (ESLint)
+  #   runs-on: ubuntu-latest
+  #   needs: Gitleaks-Scan
+  #   steps:
+  #     - name: Checkout code
+  #       uses: actions/checkout@v5
 
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: 22
-          cache: 'npm'
+  #     - name: Setup Node.js
+  #       uses: actions/setup-node@v4
+  #       with:
+  #         node-version: 22
+  #         cache: 'npm'
 
-      - name: Install dependencies
-        run: npm ci
+  #     - name: Install dependencies
+  #       run: npm ci
 
-      - name: Run Linter
-        run: npm run lint
+  #     - name: Run Linter
+  #       run: npm run lint
 
   tests:
     name: Run Unit, Integration & functional Tests
     runs-on: ubuntu-latest
-    needs: lint
+    #needs: lint
     steps:
       - name: Checkout code
         uses: actions/checkout@v5
