--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "multer": "^2.0.2",
     "nodemailer": "^6.10.0",
     "nodemon": "^3.1.9",
+    "prom-client": "^15.1.3",
     "superagent": "^10.2.3",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1"
@@ -41,18 +42,19 @@
     "jest": "^29.7.0",
     "supertest": "^7.1.4"
   },
-  
-"jest": {
-  "collectCoverage": true,
-  "coverageReporters": ["lcov"],
-  "coverageDirectory": "coverage",
-  "collectCoverageFrom": [
-    "server.js",
-    "**/*.js",
-    "!**/node_modules/**",
-    "!**/test/**",
-    "!**/config/**",
-    "!**/coverage/**"
-  ]
-}
+  "jest": {
+    "collectCoverage": true,
+    "coverageReporters": [
+      "lcov"
+    ],
+    "coverageDirectory": "coverage",
+    "collectCoverageFrom": [
+      "server.js",
+      "**/*.js",
+      "!**/node_modules/**",
+      "!**/test/**",
+      "!**/config/**",
+      "!**/coverage/**"
+    ]
+  }
 }
