--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js",
+    "start": "node src/server.js",
+    "dev": "nodemon --watch src --exec \"node src/server.js\"",
     "test": "jest --config jest.unit.config.js --coverage",
     "test:integration": "jest --config jest.integration.config.js --coverage",
     "test:functional": "jest --config jest.functional.config.js --coverage",
